unpackaged/main/default/objects/Project_Milestone__c/Project_Milestone__c.object-meta.xml
<CustomObject>
    <label>Project Milestone</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>