unpackaged/main/default/objects/Project_Milestone__c/fields/All_Documentation_Reviewed_and_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>All_Documentation_Reviewed_and_Confirmed__c</fullName>
    <label>All Documentation Reviewed and Confirmed</label>
    <type>DateTime</type>
</CustomField>