unpackaged/main/default/objects/Project_Milestone__c/fields/Contract_Received_Confirmed_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Contract_Received_Confirmed_Milestone__c</fullName>
    <label>Contract Received/Confirmed - Milestone</label>
    <type>DateTime</type>
</CustomField>