unpackaged/main/default/objects/Project_Milestone__c/fields/Contract_Signed_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_Milestone__c</fullName>
    <label>Contract Signed - Milestone</label>
    <type>DateTime</type>
</CustomField>