unpackaged/main/default/objects/Project_Milestone__c/fields/Design_Completed_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Design_Completed_Milestone__c</fullName>
    <label>Design Completed - Milestone</label>
    <type>DateTime</type>
</CustomField>