unpackaged/main/default/objects/Project_Milestone__c/fields/Design_Queued_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Design_Queued_Milestone__c</fullName>
    <label>Design Queued - Milestone</label>
    <type>DateTime</type>
</CustomField>