unpackaged/main/default/objects/Project_Milestone__c/fields/Energy_Bill_checked__c.field-meta.xml
<CustomField>
    <fullName>Energy_Bill_checked__c</fullName>
    <label>Usage Verification Complete</label>
    <type>DateTime</type>
</CustomField>