unpackaged/main/default/objects/Project_Milestone__c/fields/Energy_Usage_Verification_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Energy_Usage_Verification_Milestone__c</fullName>
    <label>Energy Usage Verification - Milestone</label>
    <type>DateTime</type>
</CustomField>