unpackaged/main/default/objects/Project_Milestone__c/fields/HOA_Disclosure_On_File_Date_Milestone__c.field-meta.xml
<CustomField>
    <fullName>HOA_Disclosure_On_File_Date_Milestone__c</fullName>
    <label>HOA Disclosure On File Date - Milestone</label>
    <type>DateTime</type>
</CustomField>