unpackaged/main/default/objects/Project_Milestone__c/fields/ICA_Documents_On_File_Date_Milestone__c.field-meta.xml
<CustomField>
    <fullName>ICA_Documents_On_File_Date_Milestone__c</fullName>
    <label>ICA Documents On File Date  - Milestone</label>
    <type>DateTime</type>
</CustomField>