unpackaged/main/default/objects/Project_Milestone__c/fields/Inspection_Complete_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Complete_Milestone__c</fullName>
    <label>Inspection Complete - Milestone</label>
    <type>DateTime</type>
</CustomField>