unpackaged/main/default/objects/Project_Milestone__c/fields/Inspection_Scheduled_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Scheduled_Milestone__c</fullName>
    <label>Inspection Scheduled - Milestone</label>
    <type>DateTime</type>
</CustomField>