unpackaged/main/default/objects/Project_Milestone__c/fields/Installation_Completed_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Installation_Completed_Milestone__c</fullName>
    <label>Installation Completed - Milestone</label>
    <type>DateTime</type>
</CustomField>