unpackaged/main/default/objects/Project_Milestone__c/fields/Installation_Ready_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Installation_Ready_Milestone__c</fullName>
    <label>Installation Ready - Milestone</label>
    <type>DateTime</type>
</CustomField>