unpackaged/main/default/objects/Project_Milestone__c/fields/Installation_Scheduled_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Installation_Scheduled_Milestone__c</fullName>
    <label>Installation Scheduled - Milestone</label>
    <type>DateTime</type>
</CustomField>