unpackaged/main/default/objects/Project_Milestone__c/fields/Installation_Started_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Installation_Started_Milestone__c</fullName>
    <label>Installation Started - Milestone</label>
    <type>DateTime</type>
</CustomField>