unpackaged/main/default/objects/Project_Milestone__c/fields/Interconnection_Application_Approved__c.field-meta.xml
<CustomField>
    <fullName>Interconnection_Application_Approved__c</fullName>
    <label>Interconnection Application Approved</label>
    <type>DateTime</type>
</CustomField>