unpackaged/main/default/objects/Project_Milestone__c/fields/Interconnection_Application_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Interconnection_Application_Submitted__c</fullName>
    <inlineHelpText>Original Interconnection Application Submitted</inlineHelpText>
    <label>Original Intcon Application Submitted</label>
    <type>DateTime</type>
</CustomField>