unpackaged/main/default/objects/Project_Milestone__c/fields/Interconnection_Process_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Interconnection_Process_Initiated__c</fullName>
    <inlineHelpText>Original Interconnnection Process Initiated</inlineHelpText>
    <label>Original Intcon Process Initiated</label>
    <type>DateTime</type>
</CustomField>