unpackaged/main/default/objects/Project_Milestone__c/fields/Lease_Loan_M1_Approval_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Lease_Loan_M1_Approval_Milestone__c</fullName>
    <label>Lease/Loan M1 Approval - Milestone</label>
    <type>DateTime</type>
</CustomField>