unpackaged/main/default/objects/Project_Milestone__c/fields/Lease_Loan_Notice_to_Proceed_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Lease_Loan_Notice_to_Proceed_Milestone__c</fullName>
    <label>Lease/Loan Notice to Proceed Milestone</label>
    <type>DateTime</type>
</CustomField>