unpackaged/main/default/objects/Project_Milestone__c/fields/Net_Metering_Application_Approved__c.field-meta.xml
<CustomField>
    <fullName>Net_Metering_Application_Approved__c</fullName>
    <label>Net Metering Application Approved</label>
    <type>DateTime</type>
</CustomField>