unpackaged/main/default/objects/Project_Milestone__c/fields/Permit_Received_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Permit_Received_Milestone__c</fullName>
    <label>Permit Approved - Milestone</label>
    <type>DateTime</type>
</CustomField>