unpackaged/main/default/objects/Project_Milestone__c/fields/Permit_Submitted_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Permit_Submitted_Milestone__c</fullName>
    <label>Permit Submitted - Milestone</label>
    <type>DateTime</type>
</CustomField>