unpackaged/main/default/objects/Project_Milestone__c/fields/PTO_Complete_Milestone__c.field-meta.xml
<CustomField>
    <fullName>PTO_Complete_Milestone__c</fullName>
    <label>PTO Complete - Milestone</label>
    <type>DateTime</type>
</CustomField>