unpackaged/main/default/objects/Project_Milestone__c/fields/PTO_Submitted_Milestone__c.field-meta.xml
<CustomField>
    <fullName>PTO_Submitted_Milestone__c</fullName>
    <label>PTO Submitted - Milestone</label>
    <type>DateTime</type>
</CustomField>