unpackaged/main/default/objects/Project_Milestone__c/fields/QC_Approval_Final_Date_Milestone__c.field-meta.xml
<CustomField>
    <fullName>QC_Approval_Final_Date_Milestone__c</fullName>
    <label>QC Approval (Final) Date - Milestone</label>
    <type>DateTime</type>
</CustomField>