unpackaged/main/default/objects/Project_Milestone__c/fields/Site_Survey_Completed_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey_Completed_Milestone__c</fullName>
    <label>Site Survey Completed - Milestone</label>
    <type>DateTime</type>
</CustomField>