unpackaged/main/default/objects/Project_Milestone__c/fields/Survey_Complete_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Survey_Complete_Confirmed__c</fullName>
    <label>Survey Complete Confirmed</label>
    <type>DateTime</type>
</CustomField>