unpackaged/main/default/objects/Project_Milestone__c/fields/Utility_Approval_for_Installation__c.field-meta.xml
<CustomField>
    <fullName>Utility_Approval_for_Installation__c</fullName>
    <inlineHelpText>Original Utility Approval for Installation</inlineHelpText>
    <label>Original Utility Approval for Install</label>
    <type>DateTime</type>
</CustomField>