unpackaged/main/default/objects/Project_Milestone__c/fields/Utility_Bill_on_File_Date_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Utility_Bill_on_File_Date_Milestone__c</fullName>
    <label>Utility Bill on File Date - Milestone</label>
    <type>DateTime</type>
</CustomField>